@@ -166,6 +166,8 @@ PIG-2228: support partial aggregation in map task (thejas)
 
 BUG FIXES
 
+PIG-2518: Add ability to clean ivy cache in build.xml (daijy)
+
 PIG-2530: Reusing alias name in nested foreach causes incorrect results (daijy)
 
 PIG-2489: Input Path Globbing{} not working with PigStorageSchema or PigStorage('\t', '-schema') (daijy)
